--- a/package.json
+++ b/package.json
@@ -15,6 +15,12 @@
   ],
   "main": "./out/extension.js",
   "contributes": {
+    "commands": [
+      {
+        "command": "command.chooseTheme",
+        "title": "%command-chooseTheme%"
+      }
+    ],
     "configuration": [
       {
         "title": "%extension-title%",
