--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "highlight-my-word",
-  "publisher": "yangchaohao",
+  "publisher": "2333Ge",
   "displayName": "%extension-title%",
   "description": "%extension-title%",
   "version": "0.0.1",
