--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "highlight-my-word",
   "publisher": "2333Ge",
-  "displayName": "%extension-title%",
-  "description": "%extension-title%",
+  "displayName": "highlight-my-word",
+  "description": "highlight-my-word",
   "version": "0.0.1",
   "repository": "https://github.com/2333Ge/highlight-my-word",
   "icon": "source/icon.png",
@@ -14,6 +14,13 @@
   ],
   "activationEvents": [
     "*"
+  ],
+  "keywords": [
+    "highlight",
+    "highlighter",
+    "mark",
+    "marker",
+    "theme"
   ],
   "main": "./out/extension.js",
   "contributes": {
